log
Sun 04 May 2025 02:37:01 AM UTC: 
 treemap.c | 162 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 154 insertions(+), 8 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:233:1: error: control reaches end of non-void function [-Werror=return-type]
  233 | }
      | ^
cc1: all warnings being treated as errors
5729e4d
